# TRTFramework

./: CMakeLists.txt  README.md  main.cpp
TRT/: CTRTEngine.cpp  CTRTEngine.h  common.h
